Fixed some links and add a little more explanation in the machine learning notebook, and update the html document corresponding.

--- a/machine_learning_example.ipynb
+++ b/machine_learning_example.ipynb
@@ -633,7 +633,7 @@
     "\n",
     "To do this, lets create a [Support Vector Machines](http://scikit-learn.org/stable/modules/svm.html) to regress againts each of the temperature features.\n",
     "\n",
-    "For this I'll use [scikit-learn](http://scikit-learn.org/stable/auto_examples/svm/plot_svm_regression.html).\n",
+    "For this I'll use `scikit-learn`.\n",
     "\n",
     "However, first let's setup the data appropriately.\n"
    ]
@@ -1194,7 +1194,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Great! Now we have the previous year weather temperatures with the current year `Punxsutawney Phil` predictions. All we have to do now is remove that `NaN` row introduced, create our model, and test!"
+    "Great! Now we have the previous year weather temperatures with the current year `Punxsutawney Phil` predictions. All we have to do now is remove that `NaN` row introduced, create our [model](http://scikit-learn.org/stable/modules/generated/sklearn.svm.SVC.html), and test!"
    ]
   },
   {
@@ -1208,16 +1208,24 @@
     "X = training_data.loc[:, 'February Average Temperature':'March Average Temperature (Pennsylvania)']\n",
     "y = training_data.loc[:, 'Punxsutawney Phil']\n",
     "\n",
+    "# Create the Model\n",
     "groundhog_svr = SVC(kernel='rbf')\n",
-    "groundhog_model = groundhog_svr.fit(X, y)\n"
+    "groundhog_model = groundhog_svr.fit(X, y)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now that we have created the model, we can test its accuracy and other performance metrics. Luckily, `scikit-learn` comes with a [bunch of useful tools to do this](http://scikit-learn.org/stable/modules/model_evaluation.html).\n",
+    "\n",
+    "I didn't set aside much data for testing apara from the last row of the data. So I'm just going to illustrate how to measure these metrics. Do note however, that the performance test I'm doing here is completely bogus, because I'm testing the model using data that I used to train it. Theoretically it should get nearly %100 on every goodness measure."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 9,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -1245,13 +1253,14 @@
     }
    ],
    "source": [
-    "# Plot the results\n",
-    "\n",
+    "# Get the data for our performance test\n",
     "groundhog_predictions = groundhog_model.predict(X)\n",
+    "# note, our index labels starts at 10 now due to filtering\n",
     "groudhog_ground_truth = groundhog_df.loc[10:, 'Punxsutawney Phil']\n",
     "\n",
+    "# Check the accuracy\n",
     "print(accuracy_score(groudhog_ground_truth, groundhog_predictions))\n",
-    "                                  \n",
+    "# Check other performance metrics              \n",
     "print(metrics.classification_report(groudhog_ground_truth, groundhog_predictions))"
    ]
   },
@@ -1260,12 +1269,17 @@
    "metadata": {},
    "source": [
     "Now lets predict this year's groundhog event, and consecuently our weather future!\n",
-    "![title](http://theotherpress.ca/wp-content/uploads/2017/01/humour_groundhog-1024x683.jpg)"
+    "\n",
+    "\n",
+    "![title](http://theotherpress.ca/wp-content/uploads/2017/01/humour_groundhog-1024x683.jpg)\n",
+    "\n",
+    "\n",
+    "Since we shifted the data down one row, we have one row that wasn't used in the training. That last row is the one we will predict. That last row should correspond to this year (but I could be wrong because I didn't check when these records stopped... lets do it anyway!)."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -1274,17 +1288,21 @@
        "'Full Shadow'"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# Get last row sample which was removed when creating the training set\n",
     "last_years_weather = groundhog_df.tail(1).loc[:, \n",
     "                                              'February Average Temperature':'March Average Temperature (Pennsylvania)']\n",
+    "# Prediciton for those weather conditions\n",
     "pred = groundhog_model.predict(last_years_weather)\n",
     "\n",
+    "# Create a reverse mapper of the number representation back to the string represenation\n",
     "inv_mapper = {v: k for k, v in mapper.items()}\n",
+    "# Show the prediction\n",
     "inv_mapper[pred[0]]"
    ]
   },
