Added a link to the groundhog dataseet.

--- a/machine_learning_example.ipynb
+++ b/machine_learning_example.ipynb
@@ -17,7 +17,9 @@
     "\n",
     "It derives from the Pennsylvania Dutch superstition that if a groundhog (Deitsch: Grundsau, Grunddax, Dax) emerging from its burrow on this day sees a shadow due to clear weather, it will retreat to its den and winter will persist for six more weeks, and if he does not, due to cloudiness, spring season will arrive early ([Wikipedia](https://en.wikipedia.org/wiki/Groundhog_Day)).\n",
     "\n",
-    "Groundhob day this year is Friday, February 2 (in 7 days)! Let's see if we can predict the groundhog's fate and the fate  North America!"
+    "Groundhob day this year is Friday, February 2 (in 7 days)! Let's see if we can predict the groundhog's fate and the fate  North America!\n",
+    "\n",
+    "To do this we'll use another [dataset from Kaggle](https://www.kaggle.com/groundhogclub/groundhog-day/data)."
    ]
   },
   {
